--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,15 @@
 {{!-- prompts the user for a username and password...if recognized it lets them log in using the log in button--}}
+
+<form class="login-form">
+  <div>
+    <label for="username-login">Username:</label>
+    <input type="text" id="username-login" />
+  </div>
+  <div>
+    <label for="password-login">Password:</label>
+    <input type="password" id="password-login" />
+  </div>
+  <div>
+    <button type="submit">login</button>
+  </div>
+</form>
