--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,14 @@
-{{!-- prompts the user for a username and password. Maybe require a certain password length. Once they make it then it saves it as valid login and takes them to the login page --}}
+
+<form class="signup-form">
+  <div>
+    <label for="username-signup">Username:</label>
+    <input type="text" id="username-signup" />
+  </div>
+  <div>
+    <label for="password-signup">Password:</label>
+    <input type="password" id="password-signup" />
+  </div>
+  <div>
+    <button type="submit">Sign Up</button>
+  </div>
+</form>
