--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -1,1 +1,27 @@
-{{!-- shows posts by everyone else on the site, I don't think we need to add in code to follow/friend people lol --}}
+{{#each posts}}
+<article class="post">
+    <div class="picture">
+        <img src={{this.image}}>
+    </div>
+    <div class="likes-and-comments">
+        {{this.like_count}} like(s) and {{this.comments.length}}
+    </div>
+    <div class="caption">
+        <p class="post-user">{{this.user}}</p>
+        <p class="post-caption">{{this.caption}}</p>
+    </div>
+</article>
+{{/each}}
+
+<form class="comment-form">
+  <div>
+    <textarea name="comment-body"></textarea>
+  </div>
+
+  <div>
+    <button type="submit">Comment</button>
+    <button type="button" class="like-btn">Like</button>
+  </div>
+</form>
+
+{{> comments post.comments}}
