--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,21 @@
-{{!-- homepage for the user. Shows their username and any posts that they have made. May want to add the option to show a picture and a bio --}}
+{{!-- profile pic --}}
+<div class="profile-pic">
+<img src="{{this.user.profilePicture}}">
+</div>
+
+{{!-- username --}}
+<div class="profile-username">
+    <h1>{{this.user.username}}</h1>
+</div>
+
+{{!-- new post option --}}
+<div>
+<a href="/newpost">New Post</a>
+</div>
+
+{{#each posts}}
+{{!-- Posts --}}
+<div>
+
+</div>
+{{/each}}
