--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-{{!-- prompts the user for a username and password...if recognized it lets them log in using the log in button--}}
+{{!-- prompts the user for a username and password...if recognized it lets them log in using the log in button, starting a session--}}
 
 <form class="login-form">
   <div>
