--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-
+{{!-- Lets a user sign up, encrypts and saves the password. --}}
 <form class="signup-form">
   <div>
     <label for="username-signup">Username:</label>
