--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
         <header>
             <h1>
                 {{#if loggedIn}}
-                Welcome {{user.username}}!
+                Welcome {{this.user.username}}!
                 {{else}}
                 Welcome to Petsagram!
                 {{/if}}
