add post routes, css, and javascript

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 {{!-- profile pic --}}
-<div class="profile-pic">
+{{!-- <div class="profile-pic">
 <img src={{this.user.profilePicture}}>
-</div>
+</div> --}}
 
 {{!-- username --}}
 <div class="profile-username">
