--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,7 +18,6 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-position: center;
     z-index: 9999;
 }
 
@@ -51,4 +50,11 @@
     border-radius: 15px;
     text-shadow: none;
     background: rgb(64, 95, 64);
+}
+
+main {
+    background-color: rgb(198, 214, 198);
+    border-style: solid;
+    border-color: rgb(41, 49, 41);
+    border-width: 2px;
 }
