--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -1,20 +1,11 @@
-.form {
-    display: block;
-    text-align: center;
-    background-color: rgb(87, 102, 87);
-    border-style: solid;
-    border-width: 3px;
-    border-color: rgb(41, 49, 41);
-    padding: 60px 0;
-    color: rgb(198, 214, 198);
-}
-
-.form div {
-    padding: 20px;
+.container {
+    background-color: rgb(198, 214, 198);
+    color: rgb(41, 49, 41);
+    padding: 10px;
 }
 
 .textbox {
-    width: 25%;
+    width: 40%;
     height: 35px;
     border: solid;
     border-width: 1px;
@@ -29,11 +20,11 @@
     border-color: rgb(198, 214, 198);
     border-radius: 15px;
     color: rgb(198, 214, 198);
-    padding: 15px 32px;
+    padding: 6px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 .button:hover {
@@ -44,7 +35,13 @@
     background-color: rgb(41, 49, 41);
 }
 
-input, label {
-    display: block;
-    margin: auto;
+.post-image img{
+    border-radius: 5px;
+    border-style: solid;
+    border-color: rgb(41, 49, 41);
+    border-width: 3px;
+}
+
+.comment-button {
+    margin-bottom: 5px;
 }
