--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,27 @@
 {{!-- prompts the user for a username and password...if recognized it lets them log in using the log in button, starting
 a session--}}
+    <link rel="stylesheet" href="/assets/css/loginsignup.css">
 
-<link rel="stylesheet" href="/assets/css/loginsignup.css">
-
-<form class="form" id="login-form">
-  <div>
-    <label for="username-login">Username:</label>
-    <input type="text" id="username-login" />
+<div class="form">
+  <div class="form-header">
+    <h1>If you already have an account</h1>
+    <h1>log in here</h1>
   </div>
-  <div>
-    <label for="password-login">Password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <input type="submit">login</input>
-  </div>
-</form>
+  <form id="login-form">
+    <div class="username-input">
+      <label for="username-login">Username:</label>
+      <input class="textbox" type="text" id="username-login" />
+    </div>
+    <div class="email-input">
+      <label for="email-login">Email:</label>
+      <input class="textbox" type="email" id="email-login" />
+    </div>
+    <div class="login-input">
+      <label for="password-login">Password:</label>
+      <input class="textbox" type="password" id="password-login" />
+    </div>
+    <div>
+      <input class="button" type="submit" value="Log In"></input>
+    </div>
+  </form>
+</div>
