fix button capabilities

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,10 +24,10 @@
                 <ul>
                     {{#if loggedIn}}
                     <li>
-                        <a href="/profile"></a>
+                        <a href="/profile">Profile</a>
                     </li>
                     <li>
-                        <a href="/feed">feed</a>
+                        <a href="/feed">Feed</a>
                     </li>
                     <li>
                         <a href="/logout">Logout</a>
@@ -52,6 +52,7 @@
     </div>
     <script src="/javascript/login.js"></script>
     <script src="/javascript/signup.js"></script>
+    <script src="/javascript/post.js"></script>
 </body>
 
 </html>
