--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,5 +1,14 @@
 {{!-- Creates a new post, we can adapt how to add the photo in later --}}
-<form class="new-post-form">
+
+<!-- try in the same form -->
+
+
+    <form action="/api/images" method="POST" enctype="multipart/form-data">
+        <input type="file" name="image">
+        <button type="submit">Post!</button>>
+    </form>
+
+{{!-- <form class="new-post-form">
   <div>
     <label for="url-new-post">Add the url for the photo you wish to add:</label>
     <input type="text" id="URL-new-post" />
@@ -8,7 +17,5 @@
     <label for="caption-new-post">Caption:</label>
     <input type="text" id="caption-new-post" />
   </div>
-  <div>
-    <button type="submit">Post!</button>
-  </div>
-</form>
+
+</form> --}}
