--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petsagram</title>
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/newpost.css">
     <link rel="stylesheet" href="/assets/css/welcome.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -14,11 +15,7 @@
     <div class="wrapper">
         <header class="main-header">
             <h1 class="welcome-header">
-                {{#if loggedIn}}
-                Welcome {{this.user.username}}!
-                {{else}}
                 Welcome to Petsagram!
-                {{/if}}
             </h1>
             <nav class="nav-header">
                 <ul>
@@ -30,7 +27,7 @@
                         <a href="/feed">Feed</a>
                     </li>
                     <li>
-                        <a href="/logout">Logout</a>
+                        <a href="/api/users/logout">Logout</a>
                     </li>
                     {{else}}
                     <li>
@@ -53,6 +50,7 @@
     <script src="/javascript/login.js"></script>
     <script src="/javascript/signup.js"></script>
     <script src="/javascript/post.js"></script>
+    <script src="/javascript/profile.js"></script>
 </body>
 
 </html>
