--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,12 +1,12 @@
-<form class="new-post-form" id="awesome-post-form">
+<form class="new-post-form" id="awesome-post-form" action="/api/post" method="post" enctype="multipart/form-data">
   <div>
     <label for="url-new-post">Add Photo Here:</label>
-    <input type="file" id="img-new-post" />
+    <input type="file" id="img-new-post" name="images"/>
     <img id="myImg" src="#">
   </div>
   <div>
     <label for="caption-new-post">Caption:</label>
-    <input type="text" class="textbox" id="caption-new-post" />
+    <input type="text" class="textbox" id="caption-new-post" name="post" />
   </div>
 
   <div>
