modified profile and feed routes

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -2,7 +2,7 @@
   <div>
     <label for="url-new-post">Add Photo Here:</label>
     <input type="file" id="img-new-post" name="images"/>
-    <img id="myImg" src="#">
+    <img id="myImg">
   </div>
   <div>
     <label for="caption-new-post">Caption:</label>
