--- a/views/partials/inner-post.handlebars
+++ b/views/partials/inner-post.handlebars
@@ -10,7 +10,7 @@ somewhere}} --}}
         </div>
         <div class="post-data col">
             <div class="post-username">
-                <h3 class="post-user">Posted by: {{this.user}}</h3>
+                <h3 class="post-user">Posted by: {{this.user.username}}</h3>
             </div>
             <div class="add">
                 <input class="button add-like" data={{this.id}} value="Like"></input>
