--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,10 +16,10 @@
     <li>
       {{> inner-post post}}
       <div class="edit-button">
-        <input class="button" id="edit" data={{this.id}} type="submit" value="Edit Caption"></input>
+        <input class="button edit" data={{this.id}} type="submit" value="Edit Caption"></input>
       </div>
       <div class="delete-button">
-        <input class="button" id="delete" data={{this.id}} type="submit" value="Delete Post"></input>
+        <input class="button delete" data={{this.id}} type="submit" value="Delete Post"></input>
       </div>
     </li>
     {{/each}}
